[metadata]
name = asciiplotter
version = 0.0.1
author = Steffen Albrecht
author_email = steffen.alb@posteo.de
description = An easy to use interface to plot anything to the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stalbrec/asciiplotter
classifiers = 
            Programming Language :: Python :: 3
            License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src